@@ -3,7 +3,8 @@
 TOPDIR	= ../..
 XCFLAGS	= -I../include
 OBJS	= control.o info.o ipc.o readdata.o load.o ppdepack.o unsqsh.o \
-	  crc32.o mmcmp.o readrle.o readhuff.o readlzw.o unarc.o arcfs.o
+	  crc32.o mmcmp.o readrle.o readhuff.o readlzw.o unarc.o arcfs.o \
+	  umx.o
 XDEPS	=
 XLIBS	= -L$(TOPDIR)/lib -lxmp
 DFILES	= Makefile $(OBJS:.o=.c)
